--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,10 @@ android {
         }
     }
 
+    lintOptions {
+        ignore("ContentDescription")
+    }
+
     testOptions{
         unitTests{
             includeAndroidResources = true
@@ -291,5 +295,6 @@ dependencies {
     implementation 'cn.aigestudio.wheelpicker:WheelPicker:1.1.3'
     implementation 'com.github.tfcporciuncula.flow-preferences:flow-preferences:1.3.2'
     testImplementation 'org.robolectric:robolectric:4.3.1'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
